# BINA_Projekt

./: .gitignore  Home.py  README.md  analyze_injuries.py  cleaned_dataset_final.csv  dashboard.py  data_clean.py  daten_check  fix_dialog_crash.py  full_dataset_cleaned.csv  full_dataset_thesis - 1.csv  install.py  pyproject.toml  requirements.txt  scratch.py  scratch_inspect.py  scratch_page_links.py  test_filter.py  test_pool.py
Arichv/: full_dataset_thesis - 1.csv
Data/: cleaned_dataset_final.csv  clubs.csv  full_dataset_cleaned.xlsx  full_dataset_thesis - 1.csv  game_events.csv  game_lineups.csv  games.csv
machine_learning/: ML_Konzept.md  README_ML.md  ml_market_value_prediction.ipynb  ml_predict.py  test_modellwerte.py  train_model.py
machine_learning/models/: mv_prediction_model.pkl
pages/: 1_Dokumentation.py  2_Dashboard.py
pages/dashboard_tabs/: bodymap.py  clubanalyse.py  market_risk.py  simulator.py  soccermap.py  trends.py
presentation (pitch and powerpoint)/: BINA-Projekt Präsentation_Gruppe 3.pptx
reports/: 2_Vereinswechsel_Duplikate.csv  alle_namenskonflikte_details.md  conflict_resolution_report.txt  conflict_resolution_summary.txt
scratch/: create_notebook.py  scratch.py  scratch_club.py  scratch_club_resolve.py  scratch_dup.py  scratch_merge.py  scratch_nav.py
scripts/: analyze_injuries.py  fix_dialog_crash.py  fix_dialog_robust.py  fix_indent.py  install.py  refactor.py
tests/: Test_compare.py  Test_duplicate.py  test.py  test_merge.py
utils/: data_loader.py  helpers.py  visualizations.py
