[project]
name = "verletzunganalyse-app"
version = "0.1.0"
description = "Dashboard and analysis for European football injuries"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "matplotlib",
    "pandas",
    "plotly",
    "seaborn",
    "streamlit",
    "streamlit-plotly-events>=0.0.6",
    "scikit-learn",
    "xgboost",
    "shap",
    "joblib",
]

[tool.uv]
package = false
link-mode = "copy"
